updated map data

--- a/test_map.html
+++ b/test_map.html
@@ -4,10 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="scripts/ui_utils.js"></script>
-        <link rel="stylesheet" href="css/main.css">
         <title>Markhor25</title>
-        <link rel="icon" type="image/x-icon" href="icons/brownie_cat.ico">
         <!-- d3 libraries -->
         <script src="https://d3js.org/d3.v4.min.js"></script>
         <!-- leaflet libraries -->
@@ -47,6 +44,9 @@
                         </div>
                     </div>
 
+                </div>
+                <div id="map-controls">
+                    <input type="range" width="100%"></input>
                 </div>
 
             </div>
