pop-up info by day
- added a pop-up box which to show date level info
- added a function which uses a dictionary to consolidate data and list all its affected cities
- updated scroll offset after info pop-up
-

--- a/test_map.html
+++ b/test_map.html
@@ -29,8 +29,15 @@
                     <div class="info-icon" onclick="toggleGeomapInfoPopup()">
                         <img src="icons/map/info-icon.png" height="30px" width="30px"></img>
                     </div>
-
+                    
                     <!-- MAP POP-UP INFO -->
+                    <div id="info-popup-byDate" class="info-popup hidden">
+                        <div id="info-popup-byDate-content">
+                            ABC
+                        </div>
+                    </div>
+
+                    <!-- LOADIN MAP POP-UP INFO -->
                     <div id="info-popup" class="info-popup">
                         <div class="close-btn" onclick="toggleGeomapInfoPopup()">
                             <img src="icons/map/popup-close.png" height="50px" width="50px"></img>
@@ -43,6 +50,7 @@
                             <p>Thank you for being here and supporting me my tiny projects. :)</p>
                         </div>
                     </div>
+
 
                 </div>
                 <div id="map-controls">
