--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div id='footer'>
             <div id="info">
-                Made using d3.js, Leaflet.js, p5.js <span> &#164; </span> Omkar Bhatt
+                Made using d3.js, Leaflet.js <span> &#164; </span> Omkar Bhatt
             </div>
             <script>
                 draw_map();
