updated information + ready to publish
- added all info for intro page main pop-up
- added map legends to the popup info
- updated phone date slider css code
- updated most fonts relative to vh
- updated circle circles for a better view over the borders
- added readme

--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
                     <!-- MAP POP-UP INFO -->
                     <div id="info-popup-byDate" class="info-popup hidden">
                         <div id="info-popup-byDate-content">
-                            ABC
+                            
+                        </div>
+                        <div id="info-popup-Legend">
+                            <ul>
+                                <li>Green dots indicate targets by Pakistan</li>
+                                <li>Purple dots indicate targets by India</li>
+                                <li>Red dots  show targets by terrorists</li>
+                                <li>Map can be zoomed in/out</li>
+                                <li>Clicking/hovering on dots shows location</li>
+                            </ul>
                         </div>
                     </div>
 
@@ -43,11 +52,11 @@
                             <img src="icons/map/popup-close.png" height="50px" width="50px"></img>
                         </div>
                         <div id="info-popup-content">
-                            <h2>Title</h2>
-                            <p>P1</p>
-                            <p>P2</p>
-                            <p><u>Disclaimer</u>: P3</p>
-                            <p>Thank you for being here and supporting me my tiny projects. :)</p>
+                            <h2>Mapping 2025 Pahalgam terror attack and the war that followed</h2>
+                            <p>Approximately 2 weeks after the terror attacks, Indian Armed Forces launched Operation Sindoor on 7th May targeting terror infrastructures in Pakistan and Pakistan-occupied-Kashmir (PoK). This was followed by a retaliatory attacks between the countries in form of drone, missiles and artillery shelling. A ceasefire was agreed upon 10th May, but the days in between were covered in fog of war and misinformation. <u>This interactive map presents verified strike locations, offering a geopolitical view of the events.</u></p>
+                            <p>The map has defined borders for India, Pakistan, and PoK. These have been interpolated by using <a href="https://www.naturalearthdata.com/downloads/10m-cultural-vectors/"  target="_blank">Natural Earth’s Countries point-of-views</a> database, which shows how a country sees other countries. The defined PoK is how the world views this geographical region. More details on the data analysis can be viewed on <a href="https://github.com/OB-0ne/geomap-Markhor-25" target="_blank">github</a>.</p>
+                            <p>All the locations depicting attacks use approximate co-ordinates to show cities/regions affected, but not the actual site of attacks. These have been collected from various news media sources including media briefings by the government of India. They have been verified with an article posted by <a href="https://thewire.in/security/complete-chronology-full-list-of-attacks-india-pakistan" target="_blank">The Wire</a>.</p>
+                            <p>The map was last updated on <i>25th May 2025</i>. Thank you for being here and supporting me and tiny projects. :)</p>
                         </div>
                     </div>
 
